--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
 spring.application.name=vaudoise-insurance-app
+
+# ===============================
+# =  SPRING BOOT CONFIGURATION  =
+# ===============================
+
+# --- Server ---
+server.port=8080
+
+# --- Database (MySQL / phpMyAdmin) ---
+spring.datasource.url=jdbc:mysql://localhost:3306/vaudoise_insurance_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+#spring.datasource.password=ton_mot_de_passe
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# --- JPA / Hibernate ---
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# --- JSON (dates ISO 8601) ---
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+
+# --- Logging ---
+logging.level.org.hibernate.SQL=warn
+logging.level.org.springframework.web=info
