--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -1,7 +1,6 @@
 ﻿# H2 FILE MODE (persistant sur disque)
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:./.vaudoise/db;MODE=MySQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=-1
-
 spring.datasource.username=sa
 spring.datasource.password=
 
@@ -11,7 +10,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# Flyway (désactivé pour aller au plus simple ; active-le si tu as des scripts H2)
+# Flyway
 spring.flyway.enabled=false
 
 # Console H2 (http://localhost:8080/h2)
