--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -1,18 +1,21 @@
-﻿# H2 FILE MODE (persistant sur disque)
+﻿# --- H2 file ---
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./.vaudoise/db;MODE=MySQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:file:./.vaudoise/db;MODE=MySQL
 spring.datasource.username=sa
 spring.datasource.password=
 
-# JPA / Hibernate
+# --- JPA/Hibernate : ne gère PAS le schéma ---
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.format_sql=true
+# (laisse Hibernate choisir le dialecte H2 automatiquement)
 
-# Flyway
-spring.flyway.enabled=false
+# --- Flyway gere le schéma ---
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+spring.flyway.validate-on-migrate=false
+spring.jpa.defer-datasource-initialization=true
 
-# Console H2 (http://localhost:8080/h2)
+# --- Console H2 ---
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
